--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-certifi==2021.10.8
+certifi>=2022.12.07
 click==8.0.3
 colorama==0.4.4
 greenlet==1.1.2
@@ -15,5 +15,5 @@ tomli==1.2.2
 typer==0.4.0
 typing-extensions==3.10.0.2
 timerdo~=0.0.1
-setuptools~=58.0.4
+setuptools>=65.5.1
 tabulate~=0.8.9
