--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,39 @@
 [build-system]
-requires = [
-    'setuptools',
-    'wheel'
+requires = ["flit_core >=3.2,<4"]
+build-backend = "flit_core.buildapi"
+
+[project]
+name = "timerdo"
+authors = [{name = "Caio Mescouto Terra de Souza", email = "caiomescouto@gmail.com"}]
+readme = "README.md"
+requires-python = ">=3.10"
+dynamic = ["version", "description"]
+dependencies = [
+    "sqlalchemy >=2.0.4, <2.1",
+    "typer >=0.7.0, <0.8",
+    "rich >=13.3, <13.4",
+    "pandas >=1.5.3, <1.6",
+    "numexpr >=2.8.4, <2.9",
+    "bottleneck >=1.3.6, <1.4",
 ]
-build-backend = 'setuptools.build_meta'
+
+[project.urls]
+Documentation = "https://timerdo.readthedocs.io/en/latest/"
+Source = "https://github.com/caiomts/timerdo"
+
+[project.optional-dependencies]
+test = [
+    "pytest >=7.2.1, <7.3",
+]
+doc = [
+    "mkdocs >=1.4.2, <1.5",
+    "mkdocstrings[python] >= 0.20.0, <0.21",
+]
+dev = [
+    "black >=23.1.0, <23.2",
+    "isort >=5.12.0, <5.13",
+    "flake8 >=6.0, <6.1",
+]
+
+[project.scripts]
+timerdo = "timerdo.main:app"
