--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "pandas >=1.5.3, <1.6",
     "numexpr >=2.8.4, <2.9",
     "bottleneck >=1.3.6, <1.4",
+    "pydantic >=1.10.5, <1.11",
 ]
 
 [project.urls]
