--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,8 @@ timerdo = "timerdo.main:app"
 [project.optional-dependencies]
 test = [
     "pytest >=7.2.1, <7.3",
+    "Faker >=17.6.0, <17.7", 
+    "factory_boy >=3.2.1, <3.3",
 ]
 docs = [
 	"mkdocs >=1.4, <1.5",
