--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ dependencies = [
 ]
 
 [project.urls]
-Documentation = "https://timerdo.readthedocs.io/en/latest/"
+Documentation = "https://github.com/caiomts/timerdo"
 Source = "https://github.com/caiomts/timerdo"
 
 [project.scripts]
@@ -33,14 +33,16 @@ test = [
 ]
 
 docs = [
-	"mkdocs >=1.4, <1.5",
+	"mkdocs-material >=9.1.3, <9.2",
 	"mkdocstrings[python] >=0.20, <0.21",
+    "mkdocs-git-revision-date-localized-plugin >=1.2.0, <1.3",
 ]
 
 dev = [
 	"black >=23.1, <23.2",
 	"flake8 >=6.0, <6.1",
 	"isort >=5.12, <5.13",
+    "pydocstyle[toml] >=6.3.0, <6.4",
 ]
 
 [tool.black]
@@ -50,3 +52,7 @@ skip-string-normalization = true
 
 [tool.isort]
 profile = "black"
+
+[tool.pydocstyle]
+inherit = false
+ignore = "D100,D107,D213,D203,D405,D406,D407,D413"
