--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,14 +12,10 @@ dependencies = [
     "sqlalchemy >=2.0.4, <2.1",
     "typer >=0.7.0, <0.8",
     "rich >=13.3, <13.4",
-    "pandas >=1.5.3, <1.6",
-    "numexpr >=2.8.4, <2.9",
-    "bottleneck >=1.3.6, <1.4",
-    "pydantic >=1.10.5, <1.11",
 ]
 
 [project.urls]
-Documentation = "https://github.com/caiomts/timerdo"
+Documentation = "http://caiomts.github.io/timerdo"
 Source = "https://github.com/caiomts/timerdo"
 
 [project.scripts]
