--- a/.github/workflows/publish_docs.yml
+++ b/.github/workflows/publish_docs.yml
@@ -24,6 +24,6 @@ jobs:
           key: ${{ github.ref }}
           path: .cache
       - name: Bootstrap
-        run: ./scripts/bootstrap.sh 
+        run: . ./scripts/bootstrap.sh 
       - name: deploy docs
-        run: ./scripts/docs_publish.sh
+        run: . ./scripts/docs_publish.sh
