--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ docs = [
 	"mkdocs-material >=9.1.3, <9.2",
 	"mkdocstrings[python] >=0.20, <0.21",
     "mkdocs-git-revision-date-localized-plugin >=1.2.0, <1.3",
+    "typer-cli >=0.0.13, <0.1",
 ]
 
 dev = [
