--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,9 @@ requires-python = ">=3.11"
 dynamic = ["version", "description"]
 dependencies = [
     "sqlalchemy >=2.0.4, <2.1",
-    "typer >=0.7.0, <0.8",
+    "typer >=0.7.0, <0.9",
     "rich >=13.3, <13.4",
+    "pandas[performance,feather] >=2.0.1, <2.1",
 ]
 
 [project.urls]
